crates/sifr_python_parser/tests/snapshots/valid_syntax@match_classify_as_identifier_1.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/inline/ok/match_classify_as_identifier_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..18,
        body: [
            Expr(
                StmtExpr {
                    range: 0..17,
                    value: Compare(
                        ExprCompare {
                            range: 0..17,
                            left: Name(
                                ExprName {
                                    range: 0..5,
                                    id: "match",
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                NotIn,
                            ],
                            comparators: [
                                Name(
                                    ExprName {
                                        range: 13..17,
                                        id: "case",
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
